Clean up plugin loading

--- a/src/plugins/mod_memcached/Makefile.am
+++ b/src/plugins/mod_memcached/Makefile.am
@@ -1,4 +1,4 @@
-lib_LTLIBRARIES = mod_memcached.la
+pkglib_LTLIBRARIES = mod_memcached.la
 mod_memcached_la_SOURCES = webcontrol_memcached.c
 mod_memcached_la_CFLAGS = -I$(top_builddir)/src
 mod_memcached_la_LDFLAGS = -module -export-dynamic -avoid-version -no-undefined
