--- a/webcontrol.conf
+++ b/webcontrol.conf
@@ -26,7 +26,8 @@ default_behavior = "deny"
 txtfile {
 
     // path to hosts file
-    file = "/etc/squid3/webcontrol_list.txt"
+    //file = "/etc/squid3/webcontrol_list.txt"
+    file = "test/webcontrol_list.txt"
 }
 
 /*
